# StockSense

./: .gitignore  CMakeLists.txt  README.md  complete_stocksense_styles.qss
include/: CustomChartWidget.h  MarketStatusChecker.h  PredictionChartWidget.h  RealNewsManager.h  RealStockDataManager.h  StockSenseApp.h  Utilities.h  aboutdialog.h  mainwindow.h  mainwindow.h.bak  stocksense_app.h
src/: CustomChartWidget.cpp  MarketStatusChecker.cpp  PredictionChartWidget.cpp  RealNewsManager.cpp  RealStockDataManager.cpp  StockSenseApp.cpp  aboutdialog.cpp  main.cpp  mainwindow.cpp  mainwindow.cpp.bak  stocksense_app.cpp
ui/: AlgorithmMonitor.ui  Dashboard.ui  DataStructuresAnalyzer.ui  Header.ui  NetworkStatus.ui  NewsPanel.ui  Predictions.ui  QuickStats.ui  SentimentMeter.ui  Settings.ui  Stock Analysis Dashboard UI.make  StockChart.ui  StockSidebar.ui  StockStats.ui  StockTicker.ui  Watchlist.ui  aboutdialog.ui  algorithm_monitor.ui  app_icon.ui  data_structures_analyzer.ui  enhanced_settings.ui  mainwindow.ui  network_status.ui  news_panel.ui  quick_stats.ui  sentiment_meter.ui  stock_chart.ui  stock_sense_logo.ui  stock_sidebar.ui  stock_stats.ui
ui/Stock Analysis Dashboard UI/: README.md  index.html  package.json
ui/Stock Analysis Dashboard UI/src/: App.tsx  index.css
ui/Stock Analysis Dashboard UI/src/components/: AlgorithmMonitor.tsx  AppIcon.tsx  Dashboard.tsx  DataStructuresAnalyzer.tsx  Header.tsx  NetworkStatus.tsx  NewsPanel.tsx  Predictions.tsx  QuickStats.tsx  SentimentMeter.tsx  Settings.tsx  StockChart.tsx  StockSenseLogo.tsx  StockSidebar.tsx  StockStats.tsx  StockTicker.tsx  Watchlist.tsx
